
- strtof() now calls nanf() and __inff(), respectively, to produce
  the special floating point values for nan/inf/infinity.

- strtod() now calls nan() and __inf(), respectively, to produce
  the special floating point values for nan/inf/infinity.

- The scanf() family now calls nan() and __inf(), respectively, to
  produce the special floating point values for nan/inf/infinity.


c.lib 1.192 (12.5.2005)

- Changed how errors are detected, as returned by Write(), Read() and
  Seek(). Seek() is particularly challenging because the value it
  returns might be a valid file position and not an error.

- Replaced numeric function return codes of 0 and -1 with macros OK,
  SEEK_ERROR/ERROR to clarify the respective purposes.

- Changed how ftell() and fseek() are used, double-checking the return
  value and the errno code.

- The record locking semaphore could wind up getting added to the public
  list twice. Fixed.

- Fixed two linker errors which were caused by duplicate symbol definitions.

- Added code to the startup routine which allows you to monitor where a command
  was started from and which parameters it was invoked with.

- If fread()/fwrite() fail to read/write any data because either the number
  of records or the size of each record is zero, both now call clearerr() to
  avoid giving the caller the wrong impression that an EOF or error occured.

- The libunix.a flavour of system() no longer attempts to translate the name
  of a command unless it contains path separator characters.

- Added strtof(), llabs(), lldiv(), vsscanf() and vscanf() for C99.

- strftime() now supports %C, %n, %r, %R, %t, %T, %u, %V, and %z for C99.
  And it ignores the E and O modifiers.

- The printf() family now supports the %hh, %j, %t and %z modifiers and the
  %a/%A conversions for C99. The %j is treated like %ll; %t and %z are treated
  like %l. Also, the "infinity"/"not a number" signals now come out as the
  strings "inf" and "nan".

- Added HUGE_VALF to <math.h>.
